Error message component, and fixed flickering while loading

--- a/src/components/Chart/index.module.scss
+++ b/src/components/Chart/index.module.scss
@@ -40,21 +40,20 @@
 
   &__chart {
     height: 100%;
-    transition: width 0.5s; // Smoother transition when changing zoom level
+
+    transition:
+      // Smoother transition when changing zoom level
+      width 0.5s,
+      // Fade out when updating
+      opacity 0.3s ease-in-out;
+
+    &--updating {
+      opacity: 0;
+    }
 
     canvas {
       min-height: 100%;
     }
-  }
-
-  &__error {
-    color: #dd6b6b;
-    text-align: center;
-    padding: 2rem;
-    font-size: font-size('md');
-    // There is a small window of time where the chart is still getting created and the error message is visible.
-    // This animation is to make the error message fade in after the chart is fully loaded.
-    @include fadeInAnimation();
   }
 
   @media (max-width: $breakpoint-tablet) {
